--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,11 @@ pandas>=2.0.0
 tqdm>=4.65.0
 numpy>=1.24.0
 
+# Visualization and reporting
+matplotlib>=3.7.0
+seaborn>=0.12.0
+weasyprint>=60.0
+
 # Web interface
 flask>=2.3.0
 flask-cors>=4.0.0
@@ -18,7 +23,7 @@ jinja2>=3.1.0
 werkzeug>=2.3.0
 
 # Database
-sqlite3
+# sqlite3 (built-in)
 
 # Utilities
 click>=8.1.0
@@ -27,9 +32,10 @@ colorama>=0.4.6
 rich>=13.0.0
 tabulate>=0.9.0
 
-# Security
+# Security and network analysis
 cryptography>=41.0.0
-hashlib
+requests>=2.31.0
+# hashlib (built-in)
 
 # Development (optional)
 pytest>=7.4.0
